third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/exp-trailing-us.stderr
TOML parse error at line 1, column 24
  |
1 | exp-trailing-us = 1e23_
  |                        ^
invalid floating-point number
expected digit
